Black mesh after using array modifier (On smoothed meshes only) #115526

Closed
opened 2023-11-28 16:16:37 +01:00 by Aswin.V.P · 5 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.01

Blender Version
Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: d0dd92834a08
Worked: 3.6.5

Caused by 383a145a19

Short description of error
Mesh turn glichy and black on viewport when using array mesh modify on a Smoothed mesh.

Exact steps for others to reproduce the error
Right click on default cube
Shade smooth
Add array modifier

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.01 **Blender Version** Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: `d0dd92834a08` Worked: 3.6.5 Caused by 383a145a190c620e8c0278db65cf183181fdadc7 **Short description of error** Mesh turn glichy and black on viewport when using array mesh modify on a Smoothed mesh. **Exact steps for others to reproduce the error** Right click on default cube Shade smooth Add array modifier
Aswin.V.P added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-11-28 16:16:38 +01:00
Member

Can confirm with:

System Information
Operating system: Linux-6.5.0-13-generic-x86_64-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.129.03

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-28 17:45, hash: ff083c15956f

Can confirm with: **System Information** Operating system: Linux-6.5.0-13-generic-x86_64-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3060 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.129.03 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-28 17:45, hash: `ff083c15956f`
Damien Picard added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-28 19:28:27 +01:00
Member

That is a recent regression, will check

That is a recent regression, will check
Philipp Oeser added the
Module
Modeling
label 2023-11-30 10:59:18 +01:00
Member

@pioverfour : if you confirm, please also at least add a corresponding Module label

@pioverfour : if you confirm, please also at least add a corresponding `Module` label
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-11-30 10:59:52 +01:00
Member

if you confirm, please also at least add a corresponding Module label

Got it, sorry about that.

> if you confirm, please also at least add a corresponding `Module` label Got it, sorry about that.
Member

Caused by 383a145a19

Got a fix for this, will post PR shortly

Caused by 383a145a190c620e8c0278db65cf183181fdadc7 Got a fix for this, will post PR shortly
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-30 15:51:02 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-11-30 16:14:38 +01:00
Brecht Van Lommel added the
Interest
Modeling
label 2023-12-11 16:01:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115526
No description provided.