Fix #115526: missing normals on first chunk of array modifier

Exposed by 383a145a19.

Think the issue actually started in cfa53e0fbeed, since then the new
destination normals were only filled from the first array copy onwards
(probably hidden by some recalculation of normals somewhere?).

In any case, starting the destination normals array with what we have
from the input mesh normals and then resizing the array (instead of
reinitializing it from scratch) fixes this.